syntax = "proto3";

package secrets;
option go_package="api/secrets/v1";

service Remote {
  rpc FetchSecret(FetchSecretRequest) returns (FetchSecretResponse);
}

// fetch
message FetchSecretRequest {
  string name = 1;
}
message FetchSecretResponse {
  string secret = 1;
}